--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,8 +7,8 @@ zookeeper.maxRetries=3
 
 
 #定时任务
-demo.demoJob.name=demoJob
+delayTaskLoadJob.name=delayTaskLoadJob
 # Seconds　Minutes　Hours　Day-of-Month　Month　Day-of-Week　Year (可选字段)
-demo.demoJob.cron=* */5 * * * ?
-demo.demoJob.shardingTotalCount=3
-demo.demoJob.shardingItemParameters=0=A,1=B,2=C
+delayTaskLoadJob.cron=0 */5 * * * ?
+delayTaskLoadJob.shardingTotalCount=3
+delayTaskLoadJob.shardingItemParameters=0=A,1=B,2=C
