update delayTask status

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,5 +10,5 @@ zookeeper.maxRetries=3
 delayTaskLoadJob.name=delayTaskLoadJob
 # Seconds　Minutes　Hours　Day-of-Month　Month　Day-of-Week　Year (可选字段)
 delayTaskLoadJob.cron=0 */5 * * * ?
-delayTaskLoadJob.shardingTotalCount=3
-delayTaskLoadJob.shardingItemParameters=0=A,1=B,2=C
+delayTaskLoadJob.shardingTotalCount=1
+delayTaskLoadJob.shardingItemParameters=0=A
