--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,6 @@
-#elastic job reg
-zookeeper.serviceLists=47.96.64.187:2181
-zookeeper.namespace=delay-task
-zookeeper.baseSleepTimeMilliseconds=5000
-zookeeper.maxSleepTimeMilliseconds=5000
-zookeeper.maxRetries=3
-
-
-#定时任务
-delayTaskLoadJob.name=delayTaskLoadJob
-# Seconds　Minutes　Hours　Day-of-Month　Month　Day-of-Week　Year (可选字段)
-delayTaskLoadJob.cron=0 */5 * * * ?
-delayTaskLoadJob.shardingTotalCount=1
-delayTaskLoadJob.shardingItemParameters=0=A
+#xxljob
+xxl.job.admin.addresses=http://127.0.0.1:8080/job-center/
+xxl.job.accessToken=xxxxx
+xxl.job.executor.appname=delay-task
+xxl.job.executor.logpath=/opt/logs/spring-boot/xxl-job/
+xxl.job.executor.logretentiondays=3
